--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             user-select: none;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            height: 100dvh;
             margin: 0;
             background-color: #e9ecef;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
