--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 11l3 3L22 4"/><path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"/></svg>
                         练习任务
                     </h6>
-                    <button class="btn btn-sm btn-outline-primary py-0" style="font-size: 12px;" onclick="startCreatePractice()">+ 新练习</button>
+                    <button class="btn btn-sm btn-outline-primary py-0" style="font-size: 12px;" onclick="startCreatePractice()">创建练习</button>
                 </div>
                 
                 <select class="form-select form-select-sm mb-2" id="practice-select" onchange="loadSelectedPractice()">
